# boris-behav-obs.github.io

./: CNAME  README.md  archives.html  authors.html  categories.html  death_of_refugees_and_migrant.html  death_of_refugees_and_migrants.html  deaths_of_refugees_and_migrants.tsv  generate_insert_from_list_of_refugees.py  generate_insert_from_list_of_refugees.py~  index.html  index.html~  justfile  mkdocs.yml  pyproject.toml  tags.html
docs/: 404.html  CNAME  create_feed.py  index.html  news.json
feed/: Makefile  README.txt  create_feed.py  justfile  news.json
pages/: .html  BORIS for Chrome OS.html  FAQ.html  about.html  behatrix.html  boris_v7.html  boris_v8.html  boris_with_debian.html  boris_with_docker.html  boris_with_ubuntu.html  chromebook.html  citations.html  citing_literature.html  debian.html  docker.html  documentation.html  doris.html  download.html  download.html~  download_android.html  download_linux.html  download_mac.html  download_win.html  download_win_template.html  faq.html  features.html  install-vlc-media-player.html  install_vlc.html  other_linux.html  other_software.html  postcards.html  raspberry_pi_4.html  report_a_bug.html  run_from_source_code.html  screenshots.html  screenshots_boris_app.html  ubuntu.html  video_tutorials.html  virtual_machine.html  vlc-media-player-installation-for-debianubuntu.html
screenshots/: 00_README.txt  120_plot_events.jpg_
src/: about.md  behatrix.md  checksums.md  chromebook.md  citation.md  citations.md  create_feed.py  credits.md  debian.md  docker.md  documentation.md  doris.md  download.md  faq.md  (+24 more)
(+74 files in other folders)
